# recoder-to-xlsx

./: .gitignore  README.md  pyproject.toml  start.sh
docs/: format-spec.md
src/recorder2xlsx/: cli.py  main.py
src/recorder2xlsx/core/: models.py  recorder.py  resample.py  xlsx_writer.py
src/recorder2xlsx/format/: alarm_log.py  data_log.py  encoding.py  errors.py  file_list.py  panel_cfg.py  tag_cfg.py
src/recorder2xlsx/gui/: main_window.py  worker.py
tests/: conftest.py  test_alarm_log.py  test_cli.py  test_data_log.py  test_e2e.py  test_encoding.py  test_file_list.py  test_format_e2e.py  test_panel_cfg.py  test_recorder.py  test_resample.py  test_tag_cfg.py  test_xlsx_writer.py
tools/: explore.py
